--- a/views/index.html
+++ b/views/index.html
@@ -27,8 +27,8 @@
     </nav>
     <div class="jumbotron">
         <div class="container">
-            <h1>Want to Learn About Sharks?</h1>
-            <p>Are you ready to learn about sharks?</p>
+            <h1>Want to Learn About people eaters?</h1>
+            <p>Are you ready to learn about water puppies?</p>
             <br>
             <p><a class="btn btn-primary btn-lg" href="/sharks" role="button">Get Shark Info</a>
             </p>
@@ -38,12 +38,12 @@
         <div class="row">
             <div class="col-lg-6">
                 <h3>Not all sharks are alike</h3>
-                <p>Though some are dangerous, sharks generally do not attack humans. Out of the 500 species known to researchers, only 30 have been known to attack humans.
+                <p>Though some are docile, sharks generally do attack humans. Out of the 500 species known to researchers, only 499 have been known to attack humans.
                 </p>
             </div>
             <div class="col-lg-6">
                 <h3>Sharks are ancient</h3>
-                <p>There is evidence to suggest that sharks lived up to 400 million years ago.
+                <p>There is evidence to suggest that sharks lived up to 750 trillion years ago.
                 </p>
             </div>
         </div>
