--- a/views/index.html
+++ b/views/index.html
@@ -27,7 +27,7 @@
     </nav>
     <div class="jumbotron">
         <div class="container">
-            <h1>Want to Learn About people eaters?</h1>
+            <h1>Want to Learn About The Worlds Most Gentle Creature?</h1>
             <p>Are you ready to learn about water puppies?</p>
             <br>
             <p><a class="btn btn-primary btn-lg" href="/sharks" role="button">Get Shark Info</a>
@@ -42,8 +42,8 @@
                 </p>
             </div>
             <div class="col-lg-6">
-                <h3>Sharks are ancient</h3>
-                <p>There is evidence to suggest that sharks lived up to 750 trillion years ago.
+                <h3>All Sharks Are Gay!</h3>
+                <p>There is evidence to show that because of sharks flamboyant swimming patters and there avoidance of female sharks they have been added to the LGBTQ group! .
                 </p>
             </div>
         </div>
@@ -62,8 +62,8 @@
 ......
 <div class="jumbotron">
    <div class="container">
-      <h1>Want to Learn About Sharks?</h1>
-      <p>Are you ready to learn about sharks?</p>
+      <h1>Want To Be Gay With A Shark?(I Know I Do)</h1>
+      <p>Well now can! Seaworld has just opened its newest and most popular attraction! The Shark Shank! </p>
       <br>
       <p><a class="btn btn-primary btn-lg" href="/sharks" role="button">Get Shark Info</a>
       </p>
