--- a/views/index.html
+++ b/views/index.html
@@ -11,63 +11,63 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark bg-dark navbar-static-top navbar-expand-md">
-        <div class="container">
-            <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span>
-            </button> <a class="navbar-brand" href="#">Everything Sharks</a>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav mr-auto">
-                    <li class="active nav-item"><a href="/" class="nav-link">Home</a>
-                    </li>
-                    <li class="nav-item"><a href="/sharks" class="nav-link">Sharks</a>
-                    </li>
-                </ul>
-            </div>
+<nav class="navbar navbar-dark bg-dark navbar-static-top navbar-expand-md">
+    <div class="container">
+        <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span>
+        </button> <a class="navbar-brand" href="#">Everything Sharks</a>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav mr-auto">
+                <li class="active nav-item"><a href="/" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item"><a href="/sharks" class="nav-link">Sharks</a>
+                </li>
+            </ul>
         </div>
-    </nav>
-    <div class="jumbotron">
-        <div class="container">
-            <h1>Want to Learn About people eaters?</h1>
-            <p>Are you ready to learn about water puppies?</p>
-            <br>
-            <p><a class="btn btn-primary btn-lg" href="/sharks" role="button">Get Shark Info</a>
+    </div>
+</nav>
+<div class="jumbotron">
+    <div class="container">
+        <h1>Want to Learn About The Worlds Most Gentle Creature?</h1>
+        <p>Are you ready to learn about water puppies?</p>
+        <br>
+        <p><a class="btn btn-primary btn-lg" href="/sharks" role="button">Get Shark Info</a>
+        </p>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-6">
+            <h3>Not all sharks are alike</h3>
+            <p>Though some are docile, sharks generally do attack humans. Out of the 500 species known to researchers, only 499 have been known to attack humans.
+            </p>
+        </div>
+        <div class="col-lg-6">
+            <h3>All Sharks Are Gay!</h3>
+            <p>There is evidence to show that because of sharks flamboyant swimming patters and there avoidance of female sharks they have been added to the LGBTQ group! .
             </p>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6">
-                <h3>Not all sharks are alike</h3>
-                <p>Though some are docile, sharks generally do attack humans. Out of the 500 species known to researchers, only 499 have been known to attack humans.
-                </p>
-            </div>
-            <div class="col-lg-6">
-                <h3>Sharks are ancient</h3>
-                <p>There is evidence to suggest that sharks lived up to 750 trillion years ago.
-                </p>
-            </div>
-        </div>
-    </div>
+</div>
 </body>
 
 </html>...
 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-   <ul class="nav navbar-nav mr-auto">
-      <li class="active nav-item"><a href="/" class="nav-link">Home</a>
-      </li>
-      <li class="nav-item"><a href="/sharks" class="nav-link">Sharks</a>
-      </li>
-   </ul>
+    <ul class="nav navbar-nav mr-auto">
+        <li class="active nav-item"><a href="/" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item"><a href="/sharks" class="nav-link">Sharks</a>
+        </li>
+    </ul>
 </div>
 ......
 <div class="jumbotron">
-   <div class="container">
-      <h1>Want to Learn About Sharks?</h1>
-      <p>Are you ready to learn about sharks?</p>
-      <br>
-      <p><a class="btn btn-primary btn-lg" href="/sharks" role="button">Get Shark Info</a>
-      </p>
-   </div>
+    <div class="container">
+        <h1>Want To Be Gay With A Shark?(I Know I Do)</h1>
+        <p>Well now can! Seaworld has just opened its newest and most popular attraction! The Shark Shank! </p>
+        <br>
+        <p><a class="btn btn-primary btn-lg" href="/sharks" role="button">Get Shark Info</a>
+        </p>
+    </div>
 </div>
 ......
 <link href="css/styles.css" rel="stylesheet">
