--- a/views/index.html
+++ b/views/index.html
@@ -28,7 +28,7 @@
 <div class="jumbotron">
     <div class="container">
         <h1>Want to Learn About The Worlds Most Gentle Creature?</h1>
-        <p>Are you ready to learn about water puppies?</p>
+        <p>kuala Bears!</p>
         <br>
         <p><a class="btn btn-primary btn-lg" href="/sharks" role="button">Get Shark Info</a>
         </p>
@@ -37,13 +37,13 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-6">
-            <h3>Not all sharks are alike</h3>
-            <p>Though some are docile, sharks generally do attack humans. Out of the 500 species known to researchers, only 499 have been known to attack humans.
+            <h3>Not all Kualas are alike</h3>
+            <p>Though some are docile, Kualas generally do attack humans. They only attack masculine men. Thud leading scientist on a journey that will change the LGBTQ community forever!
             </p>
         </div>
         <div class="col-lg-6">
-            <h3>All Sharks Are Gay!</h3>
-            <p>There is evidence to show that because of sharks flamboyant swimming patters and there avoidance of female sharks they have been added to the LGBTQ group! .
+            <h3>All Kualas Are Gay!</h3>
+            <p>There is evidence to show that because of Kualas flamboyant hand gestures and there avoidance of female Kualas they have been added to the LGBTQ group! .
             </p>
         </div>
     </div>
@@ -62,8 +62,8 @@
 ......
 <div class="jumbotron">
     <div class="container">
-        <h1>Want To Be Gay With A Shark?(I Know I Do)</h1>
-        <p>Well now can! Seaworld has just opened its newest and most popular attraction! The Shark Shank! </p>
+        <h1>Want To Be Gay With A Kuala?(I Know I Do)</h1>
+        <p>Well now can! San Antonio Zoo has just opened its newest and most popular attraction!! </p>
         <br>
         <p><a class="btn btn-primary btn-lg" href="/sharks" role="button">Get Shark Info</a>
         </p>
