--- a/views/index.html
+++ b/views/index.html
@@ -63,7 +63,7 @@
 <div class="jumbotron">
     <div class="container">
         <h1>Want To Be Gay With A Kuala?(I Know I Do)</h1>
-        <p>Well now can! San Antonio Zoo has just opened its newest and most popular attraction!! </p>
+        <p>Well now can! San Antonio Zoo has just opened its newest and most popular attraction!git! </p>
         <br>
         <p><a class="btn btn-primary btn-lg" href="/sharks" role="button">Get Shark Info</a>
         </p>
