--- a/views/index.html
+++ b/views/index.html
@@ -38,7 +38,7 @@
     <div class="row">
         <div class="col-lg-6">
             <h3>Not all Kualas are alike</h3>
-            <p>Though some are docile, Kualas generally do attack humans. They only attack masculine men. Thud leading scientist on a journey that will change the LGBTQ community forever!
+            <p>Though some are docile, Kualas generally do attack humans. They only attack masculine men. Thus leading scientist on a journey that will change the LGBTQ community forever!
             </p>
         </div>
         <div class="col-lg-6">
@@ -63,7 +63,7 @@
 <div class="jumbotron">
     <div class="container">
         <h1>Want To Be Gay With A Kuala?(I Know I Do)</h1>
-        <p>Well now can! San Antonio Zoo has just opened its newest and most popular attraction!git! </p>
+        <p>Well now can! San Antonio Zoo has just opened its newest and most popular attraction!come get it! </p>
         <br>
         <p><a class="btn btn-primary btn-lg" href="/sharks" role="button">Get Shark Info</a>
         </p>
